# iCost

./: README.md  icost.py  icost_figure.ipynb  icost_test.ipynb  icost_usage_example.ipynb  icsot_v2.py  pyproject.toml
Complexity_MST/: icost_mst.py  instance_complexity_mst.py
Results/: All-Average.xlsx  README.md  icost_dt_multi.xlsx  icost_dt_rf_mst.xlsx  icost_dt_v2.xlsx  icost_lr_multi.xlsx  icost_lr_v2.xlsx  icost_multi_average.xlsx  icost_rf.xlsx  icost_rf_multi.xlsx  icost_svm_lr_mst.xlsx  icost_svm_multi.xlsx  icost_svm_v2.xlsx
Supplementary Files/: Supplementary_File_S1_Binary_Default_Results.xlsx  Supplementary_File_S2_Binary_Cost_Tuning_Results.xlsx  Supplementary_File_S3_Resampling_Comparison.xlsx  Supplementary_File_S4_Multiclass_Results.xlsx  readme.md
examples/: basic_usage.py
icost/: __init__.py  __version__.py  categorize_minority_v2.py  icost.py  mst_linked_ind.py
tests/: test_basic.py
