# -*- coding: utf-8 -*-
"""
Created on Wed Aug 27 18:31:57 2025

@author: asif newaz
"""

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "icost"
version = "0.1.0"
description = "Instance-complexity based cost-sensitive learning"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Asif Newaz", email = "eee.asifnewaz@iut-dhaka.edu" }]
keywords = ["machine-learning","cost-sensitive learning","class-imbalance","scikit-learn"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scikit-learn>=1.1",
]

[project.urls]
Homepage = "https://github.com/newaz-aa/icost"
Issues   = "https://github.com/newaz-aa/icost/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
