[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icost"
version = "0.2.0"
description = "Instance-complexity-aware cost-sensitive learning for imbalanced classification"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name = "Asif Newaz", email = "eee.asifnewaz@iut-dhaka.edu" }
]
keywords = [
  "machine-learning",
  "cost-sensitive-learning",
  "class-imbalance",
  "imbalanced-classification",
  "instance-complexity",
  "scikit-learn"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scikit-learn>=1.1",
]

[project.optional-dependencies]
xgboost = ["xgboost>=1.6"]
dev = ["pytest>=7", "build>=1.0", "twine>=4.0"]

[project.urls]
Homepage = "https://github.com/newaz-aa/iCost"
Issues = "https://github.com/newaz-aa/iCost/issues"
Source = "https://github.com/newaz-aa/iCost"
Paper = "https://doi.org/10.48550/arXiv.2409.13007"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["icost*"]
